# dashboards

./: README.md  pyproject.toml
3d_contour/: app.py  sineEnvelope.nc
3d_contour/site/: app.json
data_collection/: app.py
data_collection/site/: app.json
devel/: 3d_contour_alt_layout.py  contour_dash.py  lasso_dash.py
lasso/: app.py
lasso/site/: app.json
