[project]
name = "mint-dashboards"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "netcdf4>=1.7.4",
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "polars>=1.40.1",
    "ptpython>=3.0.32",
    "scikit-image>=0.26.0",
    "shiny>=1.6.1",
    "shinylive>=0.8.7",
    "shinywidgets>=0.8.1",
]
